--- a/MSOProgramLearningApp/MSOTestProject/MSOTestProject.csproj
+++ b/MSOProgramLearningApp/MSOTestProject/MSOTestProject.csproj
@@ -4,7 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
-        <RootNamespace>ProgrammingLearningTests</RootNamespace>
+        <RootNamespace>MSOTestProject</RootNamespace>
         <TargetFramework>net8.0</TargetFramework>
         <!--
         This template uses native xUnit.net command line options when using 'dotnet run' and
@@ -29,7 +29,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ProgrammingLearningApp.csproj" />
+      <ProjectReference Include="..\MSOProgramLearningApp\MSOProgramLearningApp.csproj" />
     </ItemGroup>
 
 </Project>
