--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+MSOProgramLearningApp/.idea/.idea.MSOProgramLearningApp/.idea/vcs.xml
