--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 MSOProgramLearningApp/.idea/.idea.MSOProgramLearningApp/.idea/vcs.xml
+MSOProgramLearningApp/.idea/.idea.MSOProgramLearningApp/.idea/workspace.xml
