--- a/MSOProgramLearningApp/MSOAvaloniaApp/MSOAvaloniaApp.csproj
+++ b/MSOProgramLearningApp/MSOAvaloniaApp/MSOAvaloniaApp.csproj
@@ -26,6 +26,8 @@
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
         <PackageReference Include="ReactiveUI" Version="20.1.1" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
     </ItemGroup>
 
     <ItemGroup>
