--- a/MSOProgramLearningApp/MSOProgramLearningApp/MSOProgramLearningApp.csproj
+++ b/MSOProgramLearningApp/MSOProgramLearningApp/MSOProgramLearningApp.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="Avalonia" Version="11.3.8" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+      <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
     </ItemGroup>
 
 </Project>
