--- a/MSOProgramLearningApp/MSOTestProject/MSOTestProject.csproj
+++ b/MSOProgramLearningApp/MSOTestProject/MSOTestProject.csproj
@@ -25,6 +25,8 @@
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.3.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+        <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
         <PackageReference Include="xunit.v3" Version="3.1.0"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5"/>
     </ItemGroup>
