loopa sprite toegevoegd

--- a/MSOProgramLearningApp/MSOAvaloniaApp/MSOAvaloniaApp.csproj
+++ b/MSOProgramLearningApp/MSOAvaloniaApp/MSOAvaloniaApp.csproj
@@ -33,4 +33,8 @@
     <ItemGroup>
       <ProjectReference Include="..\MSOProgramLearningApp\MSOProgramLearningApp.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <AvaloniaResource Include="loopa.png" />
+    </ItemGroup>
 </Project>
