--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,9 @@ MigrationBackup/
 FodyWeavers.xsd
 MSOProgramLearningApp/.idea/.idea.MSOProgramLearningApp/.idea/vcs.xml
 MSOProgramLearningApp/.idea/.idea.MSOProgramLearningApp/.idea/workspace.xml
+document pt 3/prac3.synctex.gz
+document pt 3/prac3.pdf
+document pt 3/prac3.out
+document pt 3/prac3.fls
+document pt 3/prac3.fdb_latexmk
+document pt 3/prac3.aux
